project(WXServer)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
INCLUDE_DIRECTORIES("/usr/local/include")
LINK_DIRECTORIES("/usr/local/lib")
find_library(MICROHTTPD_LIBRARY microhttpd)
find_library(CRYPTO_LIBRARY crypto)
TARGET_LINK_LIBRARIES(WXServer ${MICROHTTPD_LIBRARY})
TARGET_LINK_LIBRARIES(WXServer ${CRYPTO_LIBRARY})
